--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,8 @@ header {
   display: -ms-flexbox;
   display: flex;
   background-color: #333;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   z-index: 9999;
   top: 0;
   width: 100%;
@@ -31,9 +32,18 @@ header {
           order: 5;
 }
 
+.navigation-bar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
 .logo-home-link {
-  width: 25px;
-  height: 25px;
+  width: 5%;
+  height: 5%;
+  margin-right: 50%;
   -o-object-fit: scale-down;
      object-fit: scale-down;
 }
@@ -58,7 +68,7 @@ body {
 
 .about-us {
   position: relative;
-  margin-top: 10%;
+  margin-top: 30%;
 }
 
 .aboutUs-container {
